--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ exceptiongroup==1.2.0
 executing==2.0.1
 Flask==2.3.3
 Flask-DebugToolbar==0.14.1
+Flask-SQLAlchemy==3.1.1
 Flask-WTF==1.2.1
 ipython==8.22.1
 itsdangerous==2.1.2
@@ -17,12 +18,15 @@ packaging==23.2
 parso==0.8.3
 pexpect==4.9.0
 prompt-toolkit==3.0.43
+psycopg2-binary==2.9.9
 ptyprocess==0.7.0
 pure-eval==0.2.2
 Pygments==2.17.2
 six==1.16.0
+SQLAlchemy==2.0.27
 stack-data==0.6.3
 traitlets==5.14.1
+typing_extensions==4.10.0
 wcwidth==0.2.13
 Werkzeug==2.3.8
 WTForms==3.1.2
